--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,13 @@ section.no-bottom-padding {
 /* Header */
 .page-header {
   border-bottom: 1px solid #ececec;
+  position: fixed;
+  width: 100%;
+  min-height: 80px;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  background-color: var(--primary-white-color);
 }
 
 /* Navigation */
@@ -133,6 +140,24 @@ section.no-bottom-padding {
 .site-nav .link.current {
   color: var(--accent-color);
 }
+
+.site-nav .item{
+  position: relative;
+}
+
+.site-nav .item .link.current::after{
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 2px;
+  min-height: 4px;
+  min-width: 100%;
+  background-color: var(--accent-color);
+}
+
+
 /* auth-nav */
 
 .auth-nav {
@@ -229,6 +254,9 @@ section.no-bottom-padding {
   border-radius: 4px;
 }
 
+
+
+
 /* Features */
 .features {
   display: flex;
@@ -300,6 +328,8 @@ display: none;
 }
 
 .title-work{
+  position: absolute;
+  bottom: 0;
   margin: 0;
   width: 100%;
   padding: 27px 82px 27px 83px;
@@ -311,8 +341,7 @@ display: none;
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
-  position: absolute;
-  bottom: 0;
+
 
   background: rgba(47, 48, 58, 0.8);
 }
@@ -572,6 +601,67 @@ address {
   background-color: var(--thirdly-bcg-color);
 }
 
+/* Backdrop */
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color:  rgba(0, 0, 0, 0.2);
+  z-index: 4;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-white-color);
+  padding: 9px 9px 10px 10px;
+}
+
+.modal-button{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+
+ 
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  cursor: pointer;
+
+  padding-left: 10px;
+  padding-bottom: 10px;
+  padding-right: 9px;
+  padding-top: 9px;
+
+  width: 30px;
+  height: 30px;
+  
+  background: var(--primary-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.icon-vector {
+  width: 11px;
+  height: 11px;
+}
+
+
+
 /* Стили для portfolio.html */
 
 .section .portfolio-title {
@@ -664,6 +754,7 @@ address {
 .project-overlay {
   position: relative;
   width: 370px;
+  z-index: 1;
 }
 
 .project-overlay-text{
@@ -674,18 +765,22 @@ address {
   height: 294px;
 
   top: 0;
+  left: 0;
   margin: 0;
   padding: 63px 24px;
+
   color: var(--primary-white-color);
   font-size: 18px;
   line-height: 1.56;
 
   background-color: rgba(33, 150, 243, 0.9);
   opacity: 0;
+  z-index: 2px;
 }
 
-.project-overlay:hover .project-overlay-text{
-opacity: 1;
+.project-list .item:hover .project-overlay-text,
+.project-list .item:focus .project-overlay-text{
+  opacity: 1;
 }
 
 
