--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,8 @@
   --primary-white-color: #ffffff;
   --secondary-bcg-color: #f5f4fa;
   --thirdly-bcg-color: #2f303a;
+  --animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
 }
 
 html {
@@ -131,6 +133,7 @@ section.no-bottom-padding {
   text-decoration: none;
   padding-top: 32px;
   padding-bottom: 32px;
+  transition: color var(--animation-duration) var(--animation-timing-function);
 }
 .site-nav .link:hover,
 .site-nav .link:focus {
@@ -141,12 +144,12 @@ section.no-bottom-padding {
   color: var(--accent-color);
 }
 
-.site-nav .item{
+.site-nav .item {
   position: relative;
 }
 
-.site-nav .item .link.current::after{
-  content: "";
+.site-nav .item .link.current::after {
+  content: '';
   display: block;
   position: absolute;
   bottom: 0;
@@ -155,8 +158,27 @@ section.no-bottom-padding {
   min-height: 4px;
   min-width: 100%;
   background-color: var(--accent-color);
+  transform: scaleX(1);
 }
 
+.site-nav .item .link::after {
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  border-radius: 2px;
+  min-height: 4px;
+  min-width: 100%;
+  background-color: var(--accent-color);
+  transform: scaleX(0);
+  transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav .item .link:hover::after,
+.site-nav .item .link:focus::after {
+  transform: scaleX(1);
+}
 
 /* auth-nav */
 
@@ -179,6 +201,7 @@ section.no-bottom-padding {
   text-decoration: none;
   list-style: none;
   align-items: center;
+  transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
 .auth-nav .link:hover,
@@ -236,13 +259,15 @@ section.no-bottom-padding {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   cursor: pointer;
+  /* position: relative; */
 
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+  /* overflow: hidden; */
 
-  display: inline-block;
+  display: inline-flex;
   min-width: 200px;
   align-items: center;
   text-align: center;
@@ -252,10 +277,49 @@ section.no-bottom-padding {
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.hero-button:hover,
+.hero-button:focus {
+  background-color: #188ce8;
+}
 
+/* .hero-button::before{
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  background-color: red;
 
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-button:hover::before{
+  transform: translateY(-60px);
+}
+
+.hero-button::after{
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 40%;
+  left: 32px;
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+  background-color: rgb(82, 47, 47);
+  transform: translateY(calc(-35% + 60px));
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+}
+
+.hero-button:hover::after{
+  transform: translateY(-35%);
+} */
 
 /* Features */
 .features {
@@ -263,8 +327,8 @@ section.no-bottom-padding {
   justify-content: space-between;
 }
 
-.section-title.features{
-display: none;
+.section-title.features {
+  display: none;
 }
 
 .features .item::before {
@@ -318,23 +382,25 @@ display: none;
   display: flex;
   margin-top: 0;
   justify-content: center;
+  
 }
 .work .item:not(:last-child) {
   margin-right: 30px;
 }
 
-.work .item{
+.work .item {
   position: relative;
 }
 
-.title-work{
+
+.title-work {
   position: absolute;
   bottom: 0;
   margin: 0;
   width: 100%;
   padding: 27px 82px 27px 83px;
   white-space: nowrap;
-  color:var(--primary-white-color); 
+  color: var(--primary-white-color);
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -342,20 +408,16 @@ display: none;
   text-align: center;
   text-transform: uppercase;
 
-
   background: rgba(47, 48, 58, 0.8);
 }
 
-.title-work.mobile{
+.title-work.mobile {
   padding: 27px 85px 27px 86px;
 }
 
-.title-work.design{
+.title-work.design {
   padding: 27px 90px 27px 91px;
 }
-
-
-
 
 /* Team */
 .section-team {
@@ -416,6 +478,8 @@ display: none;
   padding: 12px;
   color: #afb1b8;
   background-color: white;
+  transition: color var(--animation-duration) var(--animation-timing-function),
+    background-color var(--animation-duration) var(--animation-timing-function);
 }
 
 .social .item .link:not(:last-child) {
@@ -470,6 +534,9 @@ display: none;
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: color var(--animation-duration) var(--animation-timing-function),
+    background-color var(--animation-duration) var(--animation-timing-function),
+    border var(--animation-duration) var(--animation-timing-function);
 }
 .clients .item:not(:last-child) {
   margin-right: 30px;
@@ -521,12 +588,14 @@ address {
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   margin-top: 9px;
+  transition: color var(--animation-duration) var(--animation-timing-function);
 }
 .adress .tel {
   display: block;
   color: rgba(255, 255, 255, 0.6);
   text-decoration: none;
   margin-top: 9px;
+  transition: color var(--animation-duration) var(--animation-timing-function);
 }
 
 .adress .email:hover,
@@ -573,6 +642,8 @@ address {
   color: white;
   background-color: rgba(255, 255, 255, 0.1);
   margin-right: 10px;
+  transition: background-color var(--animation-duration)
+    var(--animation-timing-function);
 }
 
 .link-linkedin {
@@ -586,13 +657,15 @@ address {
   color: white;
   background-color: rgba(255, 255, 255, 0.1);
   margin-right: 0;
+
+  transition: background-color var(--animation-duration)
+    var(--animation-timing-function);
 }
 
 .media .social .link:hover,
 .link-linkedin:hover,
 .media .social .link:focus,
 .link-linkedin:focus {
-  color: white;
   background-color: var(--accent-color);
 }
 
@@ -602,14 +675,17 @@ address {
 }
 
 /* Backdrop */
-.backdrop{
+.backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:  rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   z-index: 4;
+  opacity: 1;
+
+  transition: opacity 1000ms var(--animation-timing-function);
 }
 
 .backdrop.is-hidden {
@@ -617,25 +693,29 @@ address {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
 
   min-width: 528px;
   min-height: 581px;
   background-color: var(--primary-white-color);
   padding: 9px 9px 10px 10px;
+
+   transition: transform 1000ms var(--animation-timing-function);
 }
 
-.modal-button{
+.modal-button {
   position: absolute;
   top: 8px;
   right: 8px;
 
-
- 
   display: flex;
   border-radius: 50%;
   align-items: center;
@@ -650,7 +730,7 @@ address {
 
   width: 30px;
   height: 30px;
-  
+
   background: var(--primary-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -660,13 +740,11 @@ address {
   height: 11px;
 }
 
-
-
 /* Стили для portfolio.html */
 
 .section .portfolio-title {
   margin: 0;
-  display:none;
+  display: none;
 }
 
 .section .fields {
@@ -694,6 +772,9 @@ address {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  transition: color var(--animation-duration) var(--animation-timing-function),
+    background-color var(--animation-duration) var(--animation-timing-function),
+    box-shadow var(--animation-duration) var(--animation-timing-function);
 }
 .fields .button:hover,
 .fields .button:focus {
@@ -711,13 +792,21 @@ address {
 .project-list .item {
   width: 370px;
   margin: 15px;
+  transition: box-shadow var(--animation-duration)
+    var(--animation-timing-function);
 }
 .project-list .item:nth-child(3n) {
   margin-right: 0;
 }
 
-.project-list .item:hover{
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.project-list .item:hover,
+.project-list .item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-list .link .image {
+  overflow: hidden;
 }
 
 .project-list .item:nth-last-child(-n + 3) {
@@ -754,12 +843,12 @@ address {
 .project-overlay {
   position: relative;
   width: 370px;
-  z-index: 1;
+  overflow: hidden;
 }
 
-.project-overlay-text{
+.project-overlay-text {
   display: inline-block;
-  content: "";
+  content: '';
   position: absolute;
   width: 370px;
   height: 294px;
@@ -774,13 +863,12 @@ address {
   line-height: 1.56;
 
   background-color: rgba(33, 150, 243, 0.9);
-  opacity: 0;
-  z-index: 2px;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-list .item:hover .project-overlay-text,
-.project-list .item:focus .project-overlay-text{
-  opacity: 1;
+.project-list .item:focus .project-overlay-text {
+  transform: translateY(0%);
 }
-
-
