--- a/css/styles.css
+++ b/css/styles.css
@@ -321,6 +321,118 @@ section.no-bottom-padding {
   transform: translateY(-35%);
 } */
 
+/* Form */
+.form{
+  width: 100%;
+  height: 100%;
+padding: 0;
+}
+
+.form-title{
+margin-bottom: 12px;
+margin-top: 0;
+font-weight: 700;
+font-size: 20px;
+line-height: 1.15;
+text-align: center;
+
+color: var(--title-text-color);
+
+}
+
+.form-field{
+  display: flex;
+  margin-bottom: 10px;
+  flex-direction: column;
+  text-align: start;
+}
+
+.form-field.comments{
+  margin-bottom: 0;
+}
+
+
+.form-lable{
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: #757575;
+margin-bottom: 4px;
+}
+
+.form-input{
+border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+width: 448px;
+height: 40px;
+padding: 11px 12px ;
+}
+
+.form-textarea{
+width: 448px;
+height: 120px;
+border: 1px solid rgba(33, 33, 33, 0.2);
+box-sizing: border-box;
+border-radius: 4px;
+resize: none;
+margin-bottom: 20px;
+padding: 12px 16px;
+}
+.form-textarea::placeholder{
+  font-size: 12px;
+line-height: 14px;
+letter-spacing: 0.01em;
+
+color: rgba(117, 117, 117, 0.5);
+}
+
+.agreement{
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.71;
+
+letter-spacing: 0.03em;
+
+color: #757575;
+}
+
+.agreement-input{
+  width: 16px;
+  height: 15px;
+  margin-right: 8.4px;
+}
+
+.form-button{
+  display: block;
+  margin: auto;
+  padding-bottom: 0;
+font-weight: 700;
+font-size: 16px;
+line-height: 1.87;
+cursor: pointer;
+
+letter-spacing: 0.06em;
+
+color: #FFFFFF;
+
+width: 200px;
+height: 50px;
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border: 0;
+border-radius: 4px;
+}
+
+
+
+
+
+
 /* Features */
 .features {
   display: flex;
@@ -701,12 +813,12 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
+  padding: 40px;
   transform: translate(-50%, -50%) scale(1);
 
-  min-width: 528px;
-  min-height: 581px;
+  width: 528px;
+  height: 581px;
   background-color: var(--primary-white-color);
-  padding: 9px 9px 10px 10px;
 
    transition: transform 1000ms var(--animation-timing-function);
 }
